# study-cng-spatial-index

./: .gitignore  Makefile  README.md  pyproject.toml
data/prepared/: building_obstacles.geoparquet
experiments/duckdb-geoparquet-2d/: README.md
experiments/duckdb-geoparquet-3d-route/: README.md
experiments/duckdb-geoparquet-3d-route/queries/: corridor_morton3d.sql  corridor_zfxy.sql  corridor_zxy_heightbin.sql  lookup_cells.sql
scripts/: build_2d_cells.py  build_obstacles_geoparquet.py  build_occupancy_cells.py  prepare_osm_buildings.py  prepare_osm_points.py  run_2d_bench.py  run_corridor_bench.py  run_route_bench.py  summarize_results.py
src/cng_spatial_index/: __init__.py  config.py  duckdb_queries.py  geohash_key.py  h3_key.py  height_model.py  metrics.py  morton2d.py  morton3d.py  occupancy.py  quadkey.py  route.py  zfxy.py  zxy_heightbin.py
