[project]
name = "cng-spatial-index"
version = "0.1.0"
description = "CNG / file-based 3D spatial key design comparison: zfxy vs zxy+height_bin vs Morton3D on DuckDB + GeoParquet"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "pyarrow>=16.0.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyogrio>=0.9.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "tabulate>=0.9.0",
    "h3>=3.7.0",
    "pygeohash>=1.2.0",
    "mercantile>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cng_spatial_index"]

[tool.ruff]
line-length = 100
